--- a/src/Screens/ContactList/ContactList.css
+++ b/src/Screens/ContactList/ContactList.css
@@ -93,6 +93,27 @@
     margin: 0;
 }
 
+.boton-agregar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    background-color: #0a8b37;
+    border: none;
+    border-radius: 100%;
+    height: 45px;
+    width: 45px;
+    cursor: pointer;
+    bottom: 20px;
+    right: 20px;
+}
+
+.icono-agregar {
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+}
+
 div.error {
     color: red;
     font-weight: bold;
