--- a/src/Components/ChatHeaderInfo/ChatHeaderInfo.css
+++ b/src/Components/ChatHeaderInfo/ChatHeaderInfo.css
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.chat-header form {
+.chat-header .form-info {
     margin: 0;
     padding: 0;
     display: flex;
@@ -19,10 +19,31 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    margin: 20px;
 }
 
-.chat-header form input {
+.input-info {
     width: 100%;
+    border-radius: 15px;
+    border: none;
+    font-size: 20px;
+    background-color: #3d4f5a;
+    color: #E9EDEF;
+    box-sizing: border-box;
+}
+
+.input-info ::placeholder {
+    color: #93a2ab
+}
+
+.input-info:focus {
+    outline: unset;
+    box-shadow: unset;
+}
+
+.icono-info {
+    color: #E9EDEF;
+    font-size: 20px;
 }
 
 .imagen-chat {
@@ -58,20 +79,20 @@
     margin-left: auto;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
     .imagen-chat {
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
         margin: 0;
         padding: 0;
     }
     .flecha {
-        font-size: 10px;
+        font-size: 12px;
         margin: 0;
         padding: 0;
     }
     .contacto-total .contacto-nombre {
-        font-size: 13px;
+        font-size: 15px;
         font-weight: 650;
         margin: 0;
         padding: 0;
@@ -81,8 +102,21 @@
         margin: 0;
         padding: 0;
     }
+
+    .chat-header .form-info {
+        margin: 10px;
+    }
+
     .iconos-header {
         font-size: 15px;
-        /* si pongo el margin: 0 se me pegan los iconos a la informacion del contacto */
+    }
+
+    .input-info {
+        font-size: 15px;
+    }
+
+    .icono-info {
+        color: #E9EDEF;
+        font-size: 12px;
     }
 }
