--- a/src/Components/ProfileContact/ProfileContact.css
+++ b/src/Components/ProfileContact/ProfileContact.css
@@ -11,6 +11,12 @@ body {
     margin: 0 auto;
 }
 
+.imagen {
+    border-radius: 100%;
+    height: 150px;
+    width: 150px;
+    }
+
 .profile-nro {
     display: flex;
     justify-content: center;
@@ -18,6 +24,7 @@ body {
     align-items: center;
     padding: 0;
     margin: 0;
+    font-size: 15px;
 }
 
 .profile-nombre {
@@ -26,13 +33,6 @@ body {
     font-size: 20px;
     font-weight: 600;
     padding: 0;
-}
-
-.profile-nro {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    font-size: 15px;
 }
 
 .ult-vez {
@@ -66,33 +66,32 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
 }
 
-.opciones .opcion span{
-    margin: 0;
+.opciones .opcion .text{
+    margin-top: 0;
+    margin-left: 38px;
     padding: 0;
-    display: flex;
-    flex-direction: column;
+    font-size: 13px;
+    color: #9098a1;
 }
 
 .icono-titulo-2 {
     display: flex;
-    flex-direction: rox;
+    align-items: center;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
 }
 
 .icono-titulo-2 .iconos {
     width: 18px;
     height: 18px;
+    color: #9098a1;
 }
 
 .icono-titulo svg {
-    margin: 0;
-    padding: 0;
-}
-
-.opciones {
     margin: 0;
     padding: 0;
 }
@@ -108,13 +107,6 @@ body {
     font-size: 15px;
 }
 
-.iconos-grandes-general .icono-titulo {
-    display: flex;
-    flex-direction: column;
-    padding: 8px 5px;
-    min-width: 33%;
-}
-
 .iconos-grandes-general {
     display: flex;
     flex-direction: row;
@@ -125,14 +117,12 @@ body {
 }
 
 .iconos-grandes-general .icono-titulo {
-    border: 1px solid #E9EDEF; 
+    display: flex;
+    flex-direction: column;
+    padding: 8px 5px;
+    min-width: 33%;
+    border: 1px solid #202C33; 
     border-radius: 10px;
-}
-
-.imagen {
-border-radius: 100%;
-height: 100px;
-width: 100px;
 }
 
 .volver {
@@ -143,9 +133,31 @@ width: 100px;
     left: 0;
 }
 
+.lapiz {
+    color:#E9EDEF;
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    right: 0;
+}
+
 .cabecera-profile {
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+@media screen and (max-width: 420px) {
+    .opciones .opcion .text{
+        margin-left: 35px;
+        padding: 0;
+    }
+    
+    .icono-titulo-2 {
+        font-size: 15px;
+        margin: 0;
+        padding: 7px;
+        gap: 10px;
+    }
 }
 
