--- a/src/Screens/ContactListScreen/ContactListScreen.css
+++ b/src/Screens/ContactListScreen/ContactListScreen.css
@@ -71,11 +71,15 @@
     color: #8696A0;
 }
 
+.input-buscar:focus {
+    outline: unset;
+    box-shadow: unset;
+}
+
 .imagenes {
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    
 }
 
 .barra-busqueda {
@@ -119,10 +123,49 @@ div.error {
     font-weight: bold;
 }
 
-@media screen and (min-width: 320px) {
-    
+@media screen and (max-width: 420px) {
+    .whatsapp {
+        font-size: 15px;
+    }
+
+    .iconos {
+        padding: 0;
+        margin: 0;
+    }
+
+    .input-buscar {
+        font-size: 14px;
+    }
+
+    .lupita {
+        position: absolute;
+        top: 10px;
+        left: 11px;
+        font-size: 9px;
+    }
+
+    .imagenes {
+        width: 40px;
+        height: 40px;
+        padding: 0;
+        margin: 0;
+    }
+
+    .lista-contacto .contacto .nombre{
+        font-size: 16px;
+        padding: 0;
+        margin: 0;
+    }
+
+    .lista-contactos .contacto .texto{
+        font-size: 12px;
+        font-weight: 300;
+        padding: 0;
+        margin: 0;
+    }
+
+    .tiempo {
+        font-size: 12px;
+    }
 }
 
-@media screen and (max-width: 2000) {
-    
-}
